# wagtail-demo-provider

./: .env.example  .gitignore  MANIFEST.in  README.rst  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
demoprovider/: apps.py  config.py  services.py  utils.py
demoprovider/image_providers/: __init__.py  unsplash.py
demoprovider/management/commands/: add_local_images.py  download_images.py  foobar.py  init_demo.py
home/: demo.py  models.py
home/migrations/: 0002_create_homepage.py
home/templates/home/: home_page.html
mysite/settings/: dev.py  production.py
src/demoprovider/: services.py  utils.py
src/demoprovider/management/commands/: add_local_images.py  run_demo_providers.py
testsite/home/migrations/: 0003_homepage_cover_image_homepage_image.py
testsite/mysite/settings/: base.py
