[metadata]
name = Wagtail Demo Provider
version = 0.1
description = Reusable wagtail app providing demo data like images for demonstration or development purposes.
long_description = file: README.rst
url = https://github.com/weholt/wagtail-demo-provider
author = Thomas Weholt
author_email = thomas@weholt.org
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 5.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Wagtail >= 6.0

[options.packages.find]
where=demoprovider
